demo-end-user-auth/require-valid-token/AuthorizationPolicy-frontend-ingress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-ingress
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io"]
# Can also be ["*"]
